# ssm

./: .gitignore  .pre-commit-config.yaml  Pipfile  README.md  pyproject.toml  ssm.py
tests/: test_ssm.py
