[project]
name = "ssm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "awscli>=1.44.75",
    "boto3>=1.42.85",
    "botocore>=1.42.85",
    "curses-menu>=0.9.0",
    "requests>=2.33.1",
    "termcolor>=3.3.0",
]

[dependency-groups]
dev = [
    "mypy>=1.20.0",
    "pre-commit>=4.5.1",
    "ruff>=0.15.9",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
